--- a/templating/templates/misc/user.html.twig
+++ b/templating/templates/misc/user.html.twig
@@ -18,7 +18,7 @@
 #}
 <article{{ attributes.addClass('profile') }}>
   {% if content %}
-    {% set output = render_template_user(content,user,view_mode) %}
+    {% set output = render_inline_template(var_template,user) %}
     {% if output %}
       {{output}}
     {% else %}
