--- a/templating/templates/misc/user.html.twig
+++ b/templating/templates/misc/user.html.twig
@@ -17,12 +17,13 @@
  */
 #}
 <article{{ attributes.addClass('profile') }}>
-  {% if content %}
+
     {% set output = render_inline_template(var_template,user) %}
     {% if output %}
       {{output}}
     {% else %}
-        {{spacer_top(content)|raw}} {% block templating_content %}    {{- content -}}  {% endblock %} {{spacer_bottom(content)|raw}}
+        {% if content %}
+        {{spacer_top(content)|raw}} {% block templating_content %}    {{content}}  {% endblock %} {{spacer_bottom(content)|raw}}
+        {% endif %}
     {% endif %}
-  {% endif %}
 </article>
